...
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GNA-Ua-Fnl">
                                        <rect key="frame" x="0.0" y="118" width="95" height="32"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                        <state key="normal" title="Create Order"/>
                                        <connections>
                                            <action selector="generateOrderTapped:" destination="iJp-4K-KX8" eventType="touchUpInside" id="Thb-Jy-WsR"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Order ID: None " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dEW-VJ-XL1">
                                        <rect key="frame" x="0.0" y="160" width="113" height="20"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Card Checkout" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gVC-X1-JTF">
                                        <rect key="frame" x="0.0" y="222" width="109" height="20"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Card Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fod-bU-K5o">
                                        <rect key="frame" x="0.0" y="252" width="560" height="34"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="34" id="jvq-ze-d5q"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="hLr-aI-LM9">
                                        <rect key="frame" x="0.0" y="296" width="560" height="34"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="MM/YY" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LDI-1m-9Dh">
                                                <rect key="frame" x="0.0" y="0.0" width="216" height="34"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="34" id="43D-62-dNW"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="CVV" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fRx-AA-fHQ">
                                                <rect key="frame" x="221" y="0.0" width="282" height="34"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="34" id="RyJ-aX-rNp"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zv2-MC-74k">
                                                <rect key="frame" x="508" y="0.0" width="52" height="32"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                <state key="normal" title="Submit"/>
                                                <connections>
                                                    <action selector="cardCheckoutTapped:" destination="iJp-4K-KX8" eventType="touchUpInside" id="Rb0-NO-s5W"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
...
